# formkit

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: concepts.md  examples.md  getting-started.md  index.md
docs/api/: body.md  document.md  errors.md  frame.md  index.md  param.md  profile.md  query.md  solid.md
docs/guides/: csg.md  features.md  params.md  shapes.md  solids.md
examples/: formkit_bracket.py  formkit_enclosure.py  formkit_mount.py  formkit_shape.py
src/formkit/: __init__.py  align.py  body.py  document.py  errors.py  export.py  frame.py  param.py  profile.py  query.py  solid.py
src/formkit/backend/: __init__.py  base.py  occt.py
src/formkit/features/: __init__.py
tests/: test_formkit.py  test_formkit_complex.py  test_formkit_csg.py  test_formkit_library.py
